--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 testCommitRevert {
-    commitCommand = "git commit --no-gpg-sign --all --message Sorting-Characters"
+    commitCommand = "git commit --all --message AdventOfCode19"
 }
 
 dependencies {
