--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,9 @@ dependencies {
     testCompile 'org.openjdk.jmh:jmh-core:1.19'
     testCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.19'
 }
+
+test {
+    testLogging {
+        showStandardStreams = true
+    }
+}
