--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ testCommitRevert {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    testImplementation "org.hamcrest:hamcrest:2.2"
 
     testImplementation 'org.openjdk.jmh:jmh-core:1.19'
     testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.19'
