--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,23 +12,6 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '17'
-      - name: Mount bazel cache
-        uses: actions/cache@v1
-        with:
-          path: "/home/runner/.cache/bazel"
-          key: bazel
-
-      - name: Install bazelisk
-        run: |
-          curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.11.0/bazelisk-linux-amd64"
-          mkdir -p "${GITHUB_WORKSPACE}/bin/"
-          mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
-          chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
-
+          java-version: '19'
       - name: Test
-        run: |
-          "${GITHUB_WORKSPACE}/bin/bazel" test //... \
-            --java_language_version=17 \
-            --test_output=summary \
-            --nojava_header_compilation
+        run: mvn clean test
