--- a/kata/pom.xml
+++ b/kata/pom.xml
@@ -5,6 +5,18 @@
         <groupId>uk.co.probablyfine</groupId>
         <version>0.0.0</version>
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <modelVersion>4.0.0</modelVersion>
 
